# twrpdtgen

./: README.md  guide1  guide2  guide3  mediatek  pyproject.toml  twrp_flags
tests/: test_device_tree.py  test_image_unpacker.py  test_integration.py
twrpdtgen/: __init__.py  device_tree.py  image_unpacker.py  main.py
twrpdtgen/templates/: BoardConfig.mk.jinja2  __init__.py  device.mk.jinja2  omni_device.mk.jinja2  permissive.sh.jinja2
